--- a/08-Application/source.tex
+++ b/08-Application/source.tex
@@ -1,3 +1,12 @@
+\documentclass[../main]{subfiles}
+\ifSubfilesClassLoaded{
+    \addbibresource{../Biblio/biblio.bib}
+    \dominitoc
+    \tableofcontentsfile
+    \pagenumbering{arabic}
+    \setcounter{page}{1}
+}{}
+
 \chapter{Application: prédiction d'entrée manquante}
 \graphicspath{{08-Application/}}
 \minitoc
