--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1,7 +1,7 @@
 
 
 @article{Csordas2021AreNN,
-  author     = {Csordas, Robert and van Steenkiste, Sjoerd and Schmidhuber, J.},
+  author     = {Csordas, Robert and Van Steenkiste, Sjoerd and Schmidhuber, Jürgen},
   title      = {Are Neural Nets Modular? Inspecting Functional Modularity Through Differentiable Weight Masks},
   journal    = {ArXiv},
   year       = 2021,
@@ -55,17 +55,6 @@
   keywords   = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Quantitative Biology - Neurons and Cognition},
 }
 
-@article{electronics9101605,
-  author     = {Khacef, Lyes and Rodriguez, Laurent and Miramond, Benoît},
-  title      = {Brain-Inspired Self-Organization with Cellular Neuromorphic Computing for Multimodal Unsupervised Learning},
-  journal    = {Electronics},
-  year       = 2020,
-  volume     = 9,
-  number     = 10,
-  url        = {https://www.mdpi.com/2079-9292/9/10/1605},
-  doi        = {10.3390/electronics9101605},
-  issn       = {2079-9292},
-}
 
 @incollection{fix20,
   author     = {Fix, J{\'e}r{\'e}my and Frezza-Buet, Herv{\'e}},
@@ -1403,4 +1392,12 @@
   title={An adaptive neural network - the cerebral cortex},
   author={Yves Burnod},
   year={1989}
+}
+
+@article{AyresTheCR,
+  title={The Correlation Ratio},
+  author={Leonard Porter Ayres},
+  journal={Journal of Educational Research},
+  volume={2},
+  pages={452-456}
 }
